--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,17 +2,65 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Secret Send</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body>
-<form id="sendSecret">
-    <label for="mySecret">Send me your secret:</label>
-    <input id="mySecret" name="secret">
-    <label for="mySecretPassword">Password:</label>
-    <input id="mySecretPassword" name="password">
-    <input type="submit" value="Secret Me!">
-</form>
-<div id="add-response"></div>
+
+<div class="container">
+    <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">SecretSend</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="search.html">Search by secret ID</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About us</a>
+                    </li>
+                </ul>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+            </div>
+        </div>
+    </nav>
+    <br>
+    <form class="col-md-6 mx-auto"id="sendSecret">
+        <div class="mb-3">
+            <label for="mySecret" class="form-label">Your secret:</label>
+            <textarea class="form-control" id="mySecret" rows="2" name="secret"></textarea>
+        </div>
+        <div class="mb-3">
+            <label for="mySecretPassword" class="visually-hidden">Password</label>
+            <input type="password" class="form-control" id="mySecretPassword" placeholder="Password" name="password">
+        </div>
+        <button type="submit" class="btn btn-primary mb-3" data-bs-toggle="modal" data-bs-target="#addSecretModal">Secret Me!</button>
+    </form>
+
+    <!-- Add modal windoe -->
+    <div class="modal fade" id="addSecretModal" tabindex="-1" aria-labelledby="addSecretModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="addSecretModalLabel">Your secret has been added</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+                </div>
+                <div class="modal-body" id="add-response"></div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary">Скопировать ссылку</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 <script>
     window.addEventListener( "load", function () {
@@ -62,5 +110,8 @@
         } );
     } );
 </script>
+
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
 </body>
 </html>
